fix same color clash

--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ header{
     margin: 24px  32px;
     font-size: 1.4rem;
     margin-bottom: 8px;
+    color: var(--Dark__gray__blue);
     
 }
 
