--- a/style.css
+++ b/style.css
@@ -31,9 +31,6 @@
 
 }
 
-html{
-    height: 809px;
-}
 
 html,
 body{
@@ -56,7 +53,7 @@ header{
     text-align: center;
     border-radius: 0px 0px 32px 32px ;
     padding: 24px;
-    height: 356px;
+    /* height: 356px; */
 }
 
 .header h3{
@@ -242,9 +239,9 @@ div:nth-of-type(4) p + p{
 
     .container{
         display: flex;
-        align-items: center;
+        align-items: center ;
         justify-content: center;
-        margin: auto;
+        margin: 25% auto;
         width: 736px; 
        
     }
